tests/integration/conformance/testdata/networking/serviceEntry/basic/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/serviceentries
    check:
      - exactlyOne:
          - equals: {
            "Body": {
              "hosts": [
                "www.googleapis.com"
              ],
              "ports": [
              {
                "name": "http",
                "number": 80,
                "protocol": "HTTP"
              },
              {
                "name": "https",
                "number": 443,
                "protocol": "HTTPS"
              }
              ],
              "resolution": 2
            },
            "Metadata": {
              "name": "{{.Namespace}}/googleapis"
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.ServiceEntry"
          }
